--- a/JavaChapter3/bin/.gitignore
+++ b/JavaChapter3/bin/.gitignore
@@ -8,3 +8,6 @@
 /ForEachTest.class
 /ArrayCopyTest.class
 /CommandLineParametersTest.class
+/MultidimensionalArraysTest.class
+/CompoundInterest.class
+/MathTest.class
